cmake_minimum_required (VERSION 3.5.2)

project(cpp_examples)

add_subdirectory(OM_Device_Example)
add_subdirectory(OM_Recording_Example)

add_subdirectory(OM_Device_DeBlooming_Example)
add_subdirectory(OM_Recording_DeBlooming_Example)

add_subdirectory(OGM_Device_Example)
add_subdirectory(OGM_Recording_Example)

#add_subdirectory(yuval_grisha_ron)

